@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- pty.spawn() now returns the child process status returned by os.waitpid().
+
 - Issue #15756: subprocess.poll() now properly handles errno.ECHILD to
   return a returncode of 0 when the child has already exited or cannot
   be waited on.
